--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
-    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.2.1",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
