--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "kue": "^0.11.6",
     "mongoose": "^5.5.7",
     "mongoose-paginate-v2": "^1.2.1",
     "nodemailer": "^6.1.1",
