--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/lucasromagnoli/Marketplace#readme",
   "dependencies": {
+    "@sentry/node": "^5.2.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
